# _local-run_/test.ts
@@ -8,12 +8,14 @@ import * as apiRequestEmpty from "./data/API_Event_empty.json";
 let apiRequest;
 
 //GET apiRequest
-import * as apiRequestGetList from "./test.json";
+import * as apiRequestGetList from "./data/API_Event_GET.json";
+// import * as apiRequestGetList from "./test.json";
 
 //POST apiRequest
 // import * as apiRequestGetList from './data/API_Event_POST.json';
 apiRequest = merge(apiRequestEmpty, apiRequestGetList) as APIGatewayProxyEvent;
-// apiRequest.queryStringParameters = { fileName: "local-test.png" };
+apiRequest.resource = '/test';
+apiRequest.queryStringParameters = { fileName: "Myth-08.mp3" };
  
 // apiRequest.body = JSON.stringify({
 //     "PodcastID": "123123",
